--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -3,15 +3,17 @@
     top: 0;
     overflow: hidden;
     width: 100%;
-    height: 66px;
-    background: transparent;
+
     backdrop-filter: blur(36.94200134277344px);
     --webkit-backdrop-filter: blur(36.94200134277344px);
     background-color: rgba(255, 255, 255, 0.02);
     z-index: 999;
-
+    height: 66px;
+    margin-bottom: 200px;
 }
-
+.leftMenu{
+    z-index: 1000;
+}
 .logo {
     position: absolute;
     left: 90px;
